fix some exchanges that stuck in loading, disable fixed exchange view

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,8 @@ $topBarHeight: 54px;
 $sidebar-width: 340px;
 $feed-width: 680px;
 $members-width: 672.5px;
-$post-margin-top: 137.5px;
+$standard-vertical-margin: 1.75%;
+$standard-horizontal-margin: .75%;
 $exchange-tabs-height: 190px;
 $exchange-title-height: 64px;
 
